--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,10 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <script
+      src="https://kit.fontawesome.com/23a72a9b3a.js"
+      crossorigin="anonymous"
+    ></script>
     <div id="root"></div>
     <!--
       This HTML file is a template.
